--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -12,6 +12,7 @@
     ],
     "metadata": {
         "kernelspec": {
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         }
